--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -110,7 +110,7 @@
   <div class="modal-content">
     <span class="close">&times;</span>
     <u>ALL INDIA COLLECTIVE DATA</u><br><br>
-    <b>TOTAL:</b> {{total}}<br><br><b>Confirmed Cases Indian:</b> {{confirmedCasesIndian}}<br><br><b>Confirmed Cases Foreign:</b> {{confirmedCasesForeign}}<br><br><b>Discharged:</b> {{discharged}}<br><br><b>Deaths:</b> {{deaths}}
+    <b>TOTAL:</b> {{total}}<br><br><b>Confirmed Cases Indian:</b> {{confirmedCasesIndian}}<br><br><b>Confirmed Cases Foreign:</b> {{confirmedCasesForeign}}<br><br><b>Deaths:</b> {{deaths}}
   </div>
 
 </div>
