--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -43,8 +43,9 @@
   right: 0;
 }
 .content {
-  max-width: 650px;
+  max-width: 500px;
   margin: auto;
+  position: relative;
 }
 /* The Modal (background) */
 .modal {
@@ -87,8 +88,10 @@
 </style>
 </head>
 <body>
+	
+	</div>
 	<div class="content">
-	<h3><b><u>THIS IS PAGE SHOWS LIVE COUNT AND HEAT MAP FOR COVID-19 EFFECTED AREAS</u></b></h3>
+	<h3 style="position: relative;"><b><u>COVID-19 INDIA DATA</u></b></h3>
 	<i>central contact details in case of emergency:</i><br>
 	<b>number:</b> +91-11-23978046<br>
 	<b>toll free:</b> 1075<br>
@@ -99,9 +102,54 @@
 	<a href="https://pib.gov.in/newsite/pmreleases.aspx?mincode=31" target="_blank"><img src="{{url_for('static', filename='india-icon.png')}}" style="height: 50px; width: 50px;"></a>
 	<br>
 	below is the heat map for COVID-19 Spread officially reported cases.<br>
-	<i><b>note:</b></i> Click on <b>black dots/marker in map</b> for more information.          
+	<i><b>note:</b></i> Click on <b>black dots/marker in map</b> for more information. 
+	<div style="float: left;">
+		<button  class="button" style="vertical-align:middle" id="authBtn"><span>About the Developer </span></button>
+
+<!-- The Modal -->
+<div id="authorModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <b>This Website is developed by <a href="https://linkedin.com/in/suyash-negi-789231102" target="_blank">Suyash Negi</a> for live updates and data representation of COVID-19 spread in India</b><br><br>
+    <u>DISCLAIMER</u><br><br>
+    <i>All the data showed here is from third party API and the creator of <a href="https://covid-19-in.herokuapp.com" target="_blank">this</a> website are not responsible for data presented</i><br><br>
+    Stay Safe. 
+  </div>
+
+</div>
+
+<script>
+// Get the modal
+var modal1 = document.getElementById("authorModal");
+
+// Get the button that opens the modal
+var btn1 = document.getElementById("authBtn");
+
+// Get the <span> element that closes the modal
+var span1 = document.getElementsByClassName("close")[0];
+
+// When the user clicks the button, open the modal 
+btn1.onclick = function() {
+  modal1.style.display = "block";
+}
+
+// When the user clicks on <span> (x), close the modal
+span1.onclick = function() {
+  modal1.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+  if (event.target == modal1) {
+    modal1.style.display = "none";
+  }
+}
+</script>  
+<div style="float: right;">       
 	<!-- Trigger/Open The Modal -->
-<button  class="button" style="vertical-align:middle" id="myBtn"><span>Show All India Data </span></button>
+<button  class="button" style="vertical-align:middle; " id="myBtn"><span>Show All India Data </span></button>
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
@@ -142,6 +190,7 @@ window.onclick = function(event) {
   }
 }
 </script>
+</div></div>
 	</div>
 	<div style="padding-left: 190px;">
 	<iframe src="/getHeatMap" style="height: 460px; width: 1000px;"></iframe>
