--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -192,7 +192,7 @@ window.onclick = function(event) {
 </script>
 </div></div>
 	</div>
-	<div style="padding-left: 190px;">
+	<div style="margin: auto;">
 	<iframe src="/getHeatMap" style="height: 460px; width: 1000px;"></iframe>
 	</div>
 
