--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -92,17 +92,18 @@
 	</div>
 	<div class="content">
 	<h3 style="position: relative;"><b><u>COVID-19 INDIA DATA</u></b></h3>
-	<i>central contact details in case of emergency:</i><br>
-	<b>number:</b> +91-11-23978046<br>
-	<b>toll free:</b> 1075<br>
+	<i>central contact details in case of emergency:</i><br><br>
+	<b>number:</b> +91-11-23978046<br><br>
+	<b>toll free:</b> 1075<br><br>
 
-	<a href="mailto:ncov2019@gov.in" target="_blank"><img src="{{url_for('static', filename='gmail-icon.png')}}" style="height: 50px; width: 50px;"></a>    
-	<a href="https://twitter.com/MoHFW_INDIA" target="_blank"><img src="{{url_for('static', filename='twitter-icon.png')}}" style="height: 50px; width: 50px;"> </a>    
-	<a href="https://www.facebook.com/MoHFWIndia" target="_blank"><img src="{{url_for('static', filename='facebook-icon.png')}}" style="height: 50px; width: 50px;"></a>    
-	<a href="https://pib.gov.in/newsite/pmreleases.aspx?mincode=31" target="_blank"><img src="{{url_for('static', filename='india-icon.png')}}" style="height: 50px; width: 50px;"></a>
-	<br>
-	below is the heat map for COVID-19 Spread officially reported cases.<br>
+	<a href="mailto:ncov2019@gov.in" target="_blank"><img src="{{url_for('static', filename='gmail-icon.png')}}" style="height: 40px; width: 40px;"></a>    
+	<a href="https://twitter.com/MoHFW_INDIA" target="_blank"><img src="{{url_for('static', filename='twitter-icon.png')}}" style="height: 40px; width: 40px;"> </a>    
+	<a href="https://www.facebook.com/MoHFWIndia" target="_blank"><img src="{{url_for('static', filename='facebook-icon.png')}}" style="height: 40px; width: 40px;"></a>    
+	<a href="https://pib.gov.in/newsite/pmreleases.aspx?mincode=31" target="_blank"><img src="{{url_for('static', filename='india-icon.png')}}" style="height: 40px; width: 40px;"></a>
+	<br><br>
+	below is the heat map for COVID-19 Spread officially reported cases.<br><br>
 	<i><b>note:</b></i> Click on <b>black dots/marker in map</b> for more information. 
+	<br>
 	<div style="float: left;">
 		<button  class="button" style="vertical-align:middle" id="authBtn"><span>About the Developer </span></button>
 
@@ -171,7 +172,7 @@ var modal = document.getElementById("myModal");
 var btn = document.getElementById("myBtn");
 
 // Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
+var span = document.getElementsByClassName("close")[1];
 
 // When the user clicks the button, open the modal 
 btn.onclick = function() {
@@ -192,6 +193,7 @@ window.onclick = function(event) {
 </script>
 </div></div>
 	</div>
+	<br>
 	<div style="margin: auto;">
 	<iframe src="/getHeatMap" style="height: 460px; width: 1000px;"></iframe>
 	</div>
